// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`increment should deploy 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{946A98B60000000000000000}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQDj24599wyKiueYAFJtoV7Hm98OtyWw9B82B3RSo1u3oR_Z",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 8454n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{AFF90F570000000000000000}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQDj24599wyKiueYAFJtoV7Hm98OtyWw9B82B3RSo1u3oR_Z",
            "to": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
            "type": "internal",
            "value": 9990350000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`increment should deploy 2`] = `
[
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{20064F3B00000000000000000000000000000000000000000000000000000000000000007FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFECC2_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQDj24599wyKiueYAFJtoV7Hm98OtyWw9B82B3RSo1u3oR_Z",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 6626n,
      },
    ],
  },
]
`;
